clusters/my-cluster/monitoring/localhost-grafana-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-grafana
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
